--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   wave: ^0.2.2
   blobs: ^2.0.0
+  glassmorphism: ^2.0.1
 
 dev_dependencies:
   flutter_test:
